[gd_scene load_steps=10 format=3 uid="uid://baxehejolgex8"]

[ext_resource type="Script" uid="uid://ds318pdg0mp3o" path="res://Button Menu/Settings Menu/settings_menu.gd" id="1_6120n"]
[ext_resource type="Texture2D" uid="uid://vdvoyjdpn8pa" path="res://Assets/UI/daily_box.png" id="1_la0i3"]
[ext_resource type="Texture2D" uid="uid://h68trjkjyv71" path="res://Assets/UI/red_button.png" id="3_yp380"]
[ext_resource type="Texture2D" uid="uid://cafono8jdj8ak" path="res://Assets/UI/red_button_pressed.png" id="4_lu3y7"]
[ext_resource type="Texture2D" uid="uid://c8buim2a5q7s5" path="res://Assets/UI/red_button_disabled.png" id="5_ria7w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7d0d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5a3qa"]
texture = ExtResource("1_la0i3")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ehql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6120n"]

[node name="SettingsMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -317.0
offset_right = 180.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c7d0d")
script = ExtResource("1_6120n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 230

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(304, 304)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5a3qa")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "НАСТРОЙКИ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1ehql")

[node name="SoundCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6120n")
button_pressed = true
text = "Звук"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Музыка"
horizontal_alignment = 1

[node name="HSliderMusic" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Звуковые эффекты"
horizontal_alignment = 1

[node name="HSliderSFX" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
max_value = 1.0
step = 0.01

[node name="CloseButton" type="TextureButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
texture_normal = ExtResource("3_yp380")
texture_pressed = ExtResource("4_lu3y7")
texture_disabled = ExtResource("5_ria7w")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "ЗАКРЫТЬ"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SoundCheckBox" to="." method="_on_sound_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HSliderMusic" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/HSliderSFX" to="." method="_on_h_slider_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
